# sibsutis

./: .gitignore
2sem/DM/lab1/: a.out  dmath.h  main.c  prog.py
2sem/DM/lab2/: a.out  dmath.h  main.c  shift.h
2sem/prog/cw/: a.out  func.c  func.h  main.c  makefile  test.c
2sem/prog/exam/: .binfilework.txt.swp  binfilework.txt  consp.txt
2sem/prog/lab1/: a.out  deleter.sh  doc1  doc2  pr1.c  pr2.c  task1.c  task2.c  task3  task3.c  task4.c
2sem/prog/lab2/: KIA-report-L2.docx  Makefile  deleter.sh  main
2sem/prog/lab3/: deleter.sh
2sem/prog/lab5/: Makefile  a.out
2sem/saod/lab1/: a.out  scan.gnu  sort.cpp
2sem/saod/lab3/: Makefile  a.out  func.h  graph.c  main.c  test.c
3sem/DSA/cw/: .gitignore  .~lock.Report.docx#  .~lock.Report.odt#  .~lock.presentation.pptx#  Makefile  Report.docx  (+3 more)
3sem/MLiTA/: rgr1.txt  rgr2.txt  rgr5.txt
3sem/cw-it/: .~lock.report.odt#
4sem/: .~lock.KireyevIA_IV121.docx#  reportPractice.docx  start.sh
4sem/AECS/: .gitignore  .~lock.report-03.odt#  CMakeLists.txt  CMakePresets.json  Makefile  README.md
4sem/AECS/src/libcomputer/: CMakeLists.txt  comp.c  comp.h
4sem/AECS/src/libcomputer/libcomputer/: comp.c  comp.h
4sem/comp-math/: CMakeLists.txt
4sem/comp-math/test/: CMakeLists.txt
4sem/comp-math/test/test/: test.cpp
6sem/SL/: ПроизводственноеОсвещение.txt
6sem/compilers/: .gitignore  main.docx
6sem/cpp/: boost::serialization.odp  serialization-convertable.odp
7sem/cybersec/: lab-01.cpp
7sem/db/: lab-01.accdb  lab-01.laccdb  lab-011.accdb
7sem/web/: employees.csv  lab-01.sln  projects.csv  tasks.csv
(+960 files in other folders)
